Correcciones, mejora para el práctico final.

--- a/articulo1.html
+++ b/articulo1.html
@@ -31,7 +31,7 @@
             <section id="banner">
                 <img src="img/fondo.jpg" alt="">
                 <div class="contenedor">
-                    <h2>Antonio Esteban Agüero</h2>
+                    <h2>Antonio Esteban Agüero</h2><br>
                     <p>Nació en Piedra Blanca (San Luis) el 7 de Febrero de 1917 y murió en San Luis el 18 de Junio de 1970.</p>
                     <p>Se graduó de Maestro Normal Nacional en la Escuela Normal "Juan Pascual Pringles" de la Ciudad de San Luis.</p>
                     <p>Desempeñó importantes cargos públicos en su provincia. Presidente del Consejo Provincial de Educación (1955/56), Director de Cultura (1957), Ministro de previsión Social y Educación (1957), Ministro de Gobierno (1958/59).</p>
@@ -42,7 +42,6 @@
                     <p>En 1970, Antonio Esteban Agüero recibió el título de Doctor Honoris Causa Post-Mortem de la Universidad Nacional de San Luis, por Resolución Rectoral N° 109 del 28 de Setiembre de ese año.</p>
                     <p>Numerosos escritores y críticos argentinos y extranjeros se han ocupado de la obra poética del poeta puntano: Juana de Ibarbouru, Fermín Silva Valdés, José Vasconcelos, Enrique Larreta, Ricardo Nervi, Abelardo Arias, Alejandro Nicotra, etc.</p>
                     <p>Entre sus principales publicaciones se destacan: "Poemas lugareños" (1937), "Romancero Aldeano" (1938), "Pastorales" (1939), "Romancero de niños" (1946), "Cantatas del árbol" (1953), "Un hombre dice a su pequeño país" (1972), "Canciones para la voz humana" (1973) y "Poemas Inéditos" (1978). Estos tres últimas obras fueron publicadas póstumamente por su esposa.-</p>
-
                 </div>
             </section>
 
@@ -50,16 +49,16 @@
                 <h3 style="text-align:center">El gran Poeta Puntano</h3>
                 <div class="contenedor">
                     <article class="">
-                        <img src="img/libros.jpg">
-                        <h4>Libros Puntanos</h4>
+                        <a href="img/poeta2.jpg"><img src="img/poeta2.jpg"></a>
+                        <h4>Antono E. Agüero, 1916 (2 años)</h4>
                     </article>
                     <article class="">
-                        <img src="img/libros.jpg">
-                        <h4>Libros Puntanos</h4>
+                        <a href="img/poeta1.jpg"><img src="img/poeta1.jpg"></a>
+                        <h4>El gran poeta Puntano, A.E. Agüero</h4>
                     </article>
                     <article class="">
-                        <img src="img/libros.jpg">
-                        <h4>Libros Puntanos</h4>
+                        <a href="img/poeta3.jpg"><img src="img/poeta3.jpg"></a>
+                        <h4>Casa de Antonio E. Agüero, Merlo.</h4>
                     </article>
                 </div>
             </section>
@@ -68,9 +67,8 @@
         <footer>
                 <div class="sociales">
                     <a class="icon-facebook" href="https://www.facebook.com/tradicionpuntana/" target="_blank"></a>
-                    <a class="icon-instagram" href="https://www.instagram.com/tradicionpuntana/"></a>
-                    <a class="icon-twitter" href="https://www.twitter.com/tradicionpuntana/"></a>
-                    <a class="icon-whatsapp" href=""></a>
+                    <a class="icon-instagram" href="https://www.instagram.com/tradicionpuntana/" target="_blank"></a>
+                    <a class="icon-twitter" href="https://www.twitter.com/tradipuntana/" target="_blank"></a>
                 </div>
         </footer>
 
