--- a/articulo2.html
+++ b/articulo2.html
@@ -22,18 +22,26 @@
                     <a href="index.html" class="icon-home"> Inicio</a>
                     <a href="nosotros.html" class="icon-user"> Nosotros</a>
                     <a href="blog.html" class="icon-users"> Blog</a>
-                    <a href="galeria.html" class="icon-picture"> Galeria</a>
+                    <a href="galeria.html" class="icon-picture"> &nbsp Galeria</a>
                     <a href="contacto.html" class="icon-mail"> Contacto</a>
                 </nav>
             </div>
         </header>
         <main>
             <section id="banner">
-                <img src="img/galeria.jpg" alt="">
+                <img src="img/fondo.jpg" alt="">
+                <div class="contenedor">
+                    <h2>Algarrobo Abuelo</h2><br>
+                    <p>En 1953 Antonio Esteban Agüero publicó la Cantata del Algarrobo Abuelo, que hizo famoso al árbol y también al mismo poeta. Es un gran poema, de los mejores argentinos. Y su autor mereció el elogio de Borges, a quien le gustaban los temas criollos afines a sus orígenes, pero que siempre fue bastante parco a la hora de ponderar poetas. Agüero también pertenecía a antiguos linajes criollos, y como dijimos, en el predio ancestral de su familia creció durante siglos el árbol histórico. "Un árbol rey, un árbol solo, el árbol. "A él, que era hombre de amigos y de tertulias de guitarra y vino, también le gustaba recorrer solitario esa zona sombreada por las grandes ramas y poblada por los pájaros, y habrá tenido largas conversaciones consigo mismo y con su amigo vegetal. Sufrió persecuciones políticas, pero alcanzó a conocer un buen reconocimiento a su obra, cosa no tan frecuente en los poetas. Es que conmovió al contar del terruño, de su naturaleza y de la historia. Con hondura. Murió en 1970 y la casona de su familia cercana al árbol, colonial, con galerías, aljibe y recuerdos, ahora es un museo.
+                    </p><br>
+                    <p>Salud, Algarrobo Abuelo de Merlo. Que vivas mucho, imagen de la patria, y que ella como vos se sostengan y se libren de parasitarios y falsos claveles del aire.</p><br>
+                    <p>Y, como Agüero, " Así yo quiero terminar la Oda, asistido por ángeles del canto:/ Algarrobo natal, Abuelo nuestro,/ ¡Catedral de los pájaros!".</p>
+
+                </div>
             </section>
 
             <section id="blog">
-                <h3 style="text-align:center">Imágenes:</h3>
+                <h3 style="text-align:center">El gran Poeta Puntano</h3>
                 <div class="contenedor">
                     <article class="">
                         <a href="img/algarrobo1.jpg"><img src="img/algarrobo1.jpg"></a>
@@ -47,30 +55,6 @@
                         <a href="img/algarrobo3.jpg"><img src="img/algarrobo3.jpg"></a>
                         <h4>Algarrobo Abuelo, Piedra Blanca.</h4>
                     </article>
-                    <article class="">
-                        <a href="img/poeta2.jpg"><img src="img/poeta2.jpg"></a>
-                        <h4>Antono E. Agüero, 1916 (2 años)</h4>
-                    </article>
-                    <article class="">
-                        <a href="img/poeta1.jpg"><img src="img/poeta1.jpg"></a>
-                        <h4>El gran poeta Puntano, A.E. Agüero</h4>
-                    </article>
-                    <article class="">
-                        <a href="img/poeta3.jpg"><img src="img/poeta3.jpg"></a>
-                        <h4>Casa de Antonio E. Agüero, Merlo.</h4>
-                    </article>
-                    <article class="">
-                        <a href="img/coco1.jpg"><img src="img/coco1.jpg"></a>
-                        <h4>El "Coco" Altamirano</h4>
-                    </article>
-                    <article class="">
-                        <a href="img/coco2.jpg"><img src="img/coco2.jpg"></a>
-                        <h4>El "Coco" Altamirano</h4>
-                    </article>
-                    <article class="">
-                        <a href="img/coco3.jpeg"><img src="img/coco3.jpeg"></a>
-                        <h4>El "Coco" Altamirano</h4>
-                    </article>
                 </div>
             </section>
         </main>
@@ -82,5 +66,6 @@
                     <a class="icon-twitter" href="https://www.twitter.com/tradipuntana/" target="_blank"></a>
                 </div>
         </footer>
+
     </body>
 </html>
