--- a/articulo3.html
+++ b/articulo3.html
@@ -22,32 +22,35 @@
                     <a href="index.html" class="icon-home"> Inicio</a>
                     <a href="nosotros.html" class="icon-user"> Nosotros</a>
                     <a href="blog.html" class="icon-users"> Blog</a>
-                    <a href="galeria.html" class="icon-picture"> Galeria</a>
+                    <a href="galeria.html" class="icon-picture"> &nbsp Galeria</a>
                     <a href="contacto.html" class="icon-mail"> Contacto</a>
                 </nav>
             </div>
         </header>
         <main>
             <section id="banner">
-                <img src="img/blog.jpg" alt="">
+                <img src="img/fondo.jpg" alt="">
+                <div class="contenedor">
+                    <h2>El "Coco" Altamirano</h2><br>
+                    <p>Hoy, queremos hablarles de nuestro querido amigo “El Coco”, como lo llamamos afectuosamente. El hombre que describió la belleza de la Villa de Merlo en unas pocas estrofas, y dio a conocer este rincón del mundo mediante su dulce melodía. Para quienes no lo conocen, Jorge Altamirano, ha dedicado gran parte de su vida componiendo hermosa poesía y cantos, escribió un libro de relatos en versos de cosas que lo impresionaron, tal como cita en la descripción del mismo “Mensajero de los sueños”, además, puso música a poemas de Antonio Esteban Agüero, un reconocido poeta puntano, a través del repertorio “Cielo sin aviones”.</p><br>
+                    <p>Trabajó en la dirección de turismo y casa del Poeta donde tuvo un excelente desempeño. En noviembre del 2017 fue nombrado ciudadano Ilustre y vecino ejemplar de la Villa de Merlo, como acto de reconocimiento, a su aporte con la creación de la ”Oda a Merlo”, que adoptamos con gran cariño como nuestro Himno, y otras actividades abocadas con pasión a nuestro amado pueblo. Aquí les transcribimos la letra de esta hermosa Oda para que disfruten junto a la voz de Jorge “El Coco” Altamirano.</p>
+                </div>
             </section>
-            <section id="bienvenidos">
-                <h2>BIENVENIDOS AL BLOG</h2>
-                <P>Transmisión o comunicación de noticias, literatura popular, doctrinas, ritos, costumbres y mucho más.</P>
-            </section>
+
             <section id="blog">
+                <h3 style="text-align:center">El gran Poeta Puntano</h3>
                 <div class="contenedor">
                     <article class="">
-                        <a href="articulo1.html"><img src="img/poeta1.jpg"></a>
-                        <h4>Antonio E. Agüero</h4>
+                        <a href="img/coco1.jpg"><img src="img/coco1.jpg"></a>
+                        <h4>El "Coco" Altamirano</h4>
                     </article>
                     <article class="">
-                        <a href="articulo2.html"><img src="img/algarrobo1.jpg"></a>
-                        <h4>Algarrobo Abuelo</h4>
+                        <a href="img/coco2.jpg"><img src="img/coco2.jpg"></a>
+                        <h4>El "Coco" Altamirano</h4>
                     </article>
                     <article class="">
-                        <a href="articulo3.html"><img src="img/coco1.jpg"></a>
-                        <h4>Coco Altamirano</h4>
+                        <a href="img/coco3.jpeg"><img src="img/coco3.jpeg"></a>
+                        <h4>El "Coco" Altamirano</h4>
                     </article>
                 </div>
             </section>
