--- a/contacto.html
+++ b/contacto.html
@@ -52,9 +52,8 @@
         <footer>
             <div class="sociales">
                 <a class="icon-facebook" href="https://www.facebook.com/tradicionpuntana/" target="_blank"></a>
-                <a class="icon-instagram" href="https://www.instagram.com/tradicionpuntana/"></a>
-                <a class="icon-twitter" href="https://www.twitter.com/tradicionpuntana/"></a>
-                <a class="icon-whatsapp" href=""></a>
+                <a class="icon-instagram" href="https://www.instagram.com/tradicionpuntana/" target="_blank"></a>
+                <a class="icon-twitter" href="https://www.twitter.com/tradipuntana/" target="_blank"></a>
             </div>
         </footer>
         <script src="js/validar.js" charset="utf-8"></script>
