--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
                 <h3 style="text-align:center">Lo último de nuestro Blog</h3>
                 <div class="contenedor">
                     <article class="">
-                        <img src="img/libros.jpg">
-                        <h4>Libros Puntanos</h4>
+                        <a href="articulo1.html"><img src="img/poeta1.jpg"></a>
+                        <h4>Antonio E. Agüero</h4>
                     </article>
                     <article class="">
-                        <img src="img/libros.jpg">
-                        <h4>Libros Puntanos</h4>
+                        <a href="articulo2.html"><img src="img/algarrobo1.jpg"></a>
+                        <h4>Algarrobo Abuelo</h4>
                     </article>
                     <article class="">
-                        <img src="img/libros.jpg">
-                        <h4>Libros Puntanos</h4>
+                        <a href="articulo3.html"><img src="img/coco1.jpg"></a>
+                        <h4>Coco Altamirano</h4>
                     </article>
                 </div>
             </section>
@@ -71,9 +71,8 @@
         <footer>
                 <div class="sociales">
                     <a class="icon-facebook" href="https://www.facebook.com/tradicionpuntana/" target="_blank"></a>
-                    <a class="icon-instagram" href="https://www.instagram.com/tradicionpuntana/"></a>
-                    <a class="icon-twitter" href="https://www.twitter.com/tradicionpuntana/"></a>
-                    <a class="icon-whatsapp" href=""></a>
+                    <a class="icon-instagram" href="https://www.instagram.com/tradicionpuntana/" target="_blank"></a>
+                    <a class="icon-twitter" href="https://www.twitter.com/tradipuntana/" target="_blank"></a>
                 </div>
         </footer>
         <script src="js/validar.js" charset="utf-8"></script>
